<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="2"
	    android:gravity="center"
	    android:orientation="horizontal" >

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_weight="2"
		    android:gravity="center"
		    android:text="@string/icono" />
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/titulo" />

	</LinearLayout>
	    
	<TableLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_gravity="center"
	    android:layout_weight="1" >

	    <TableRow
	        android:id="@+id/tableRow1"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_gravity="center"
	        android:layout_weight="1" >

	        <Button
	            android:id="@+id/button1"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_weight="1"
	            android:text="@string/boton1" />

	        <Button
	            android:id="@+id/button3"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_weight="1"
	            android:text="@string/boton3" />

	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow2"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_gravity="center"
	        android:layout_weight="1" >

	        <Button
	            android:id="@+id/button2"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_weight="1"
	            android:text="@string/boton2" />

	        <Button
	            android:id="@+id/button4"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_weight="1"
	            android:text="@string/boton4" />

	    </TableRow>

	</TableLayout>
	
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/pie1" />
	
	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/pie2"/>
</LinearLayout>
